feat: Adiciona rotas para filtrar clientes por login e userID, atualiza documentação Swagger
